syntax = "proto3";

package address;

option go_package = "go-ecommerce/proto/address";

service AddressService {
  rpc CreateAddress(CreateAddressRequest) returns (CreateAddressResponse);
  rpc ListAddress(ListAddressRequest) returns (ListAddressResponse);
  rpc GetAddress(GetAddressRequest) returns (GetAddressResponse);
  rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse);
  rpc DeleteAddress(DeleteAddressRequest) returns (DeleteAddressResponse);
  rpc SetDefaultAddress(SetDefaultAddressRequest) returns (SetDefaultAddressResponse);
}

// AddressInfo
message AddressInfo {
  int64 id = 1;
  int64 user_id = 2;
  string name = 3;       // 收货人姓名
  string mobile = 4;     // 手机号
  string province = 5;   // 省
  string city = 6;       // 市
  string district = 7;   // 区
  string detail_address = 8; // 详细地址
  bool is_default = 9;   // 新增：是否默认地址
}

message CreateAddressRequest {
  int64 user_id = 1;
  string name = 2;
  string mobile = 3;
  string province = 4;
  string city = 5;
  string district = 6;
  string detail_address = 7;
}

message CreateAddressResponse {
  int64 address_id = 1;
}

message ListAddressRequest {
  int64 user_id = 1;
}

message ListAddressResponse {
  repeated AddressInfo addresses = 1; // 引用 AddressInfo
}

message GetAddressRequest {
  int64 address_id = 1;
}

message GetAddressResponse {
  AddressInfo address = 1; // 引用 AddressInfo
}

message UpdateAddressRequest {
  int64 id = 1;      // 改为 id
  int64 user_id = 2; // 用于鉴权
  string name = 3;
  string mobile = 4;
  string province = 5;
  string city = 6;
  string district = 7;
  string detail_address = 8;
}

message UpdateAddressResponse {
  bool success = 1;
}

message DeleteAddressRequest {
  int64 address_id = 1;
  int64 user_id = 2;
}

message DeleteAddressResponse {
  bool success = 1;
}

message SetDefaultAddressRequest {
  int64 address_id = 1;
  int64 user_id = 2;
}

message SetDefaultAddressResponse {
  bool success = 1;
}