syntax = "proto3";

package cart;

option go_package = "go-ecommerce/proto/cart;cart";

service CartService {
  // 添加商品到购物车
  rpc AddItem(AddItemRequest) returns (AddItemResponse);
  // 获取购物车列表
  rpc GetCart(GetCartRequest) returns (GetCartResponse);
  // 清空购物车
  rpc EmptyCart(EmptyCartRequest) returns (EmptyCartResponse);
}

message CartItem {
  int64 product_id = 1;
  int64 sku_id = 2;
  int32 quantity = 3; // 数量
}

message AddItemRequest {
  int64 user_id = 1;
  CartItem item = 2;
}

message AddItemResponse {
  int32 code = 1;
  string msg = 2;
}

message GetCartRequest {
  int64 user_id = 1;
}

message GetCartResponse {
  repeated CartItem items = 1;
}

message EmptyCartRequest {
  int64 user_id = 1;
}

message EmptyCartResponse {
  bool success = 1;
}