syntax = "proto3";

package order;

option go_package = "go-ecommerce/proto/order";

service OrderService {
  // 创建订单
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  // 获取订单列表
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  // 标记订单为已支付 (供 Payment Service 调用)
  rpc MarkOrderPaid(MarkOrderPaidRequest) returns (MarkOrderPaidResponse);
  // 取消订单
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

message CreateOrderRequest {
  int64 user_id = 1;
}

message CreateOrderResponse {
  string order_no = 1; 
  float total_amount = 2;
}

message ListOrdersRequest {
  int64 user_id = 1;
}

message ListOrdersResponse {
  repeated OrderInfo orders = 1;
}

message OrderInfo {
  string order_no = 1;
  float total_amount = 2;
  int32 status = 3; // 0:待支付, 1:已支付
  string created_at = 4; // [新增] 下单时间
  repeated OrderItem items = 5; // [保留] 你的商品详情列表
}

message OrderItem {
  string product_name = 1;
  string sku_name = 2;
  float price = 3;
  int32 quantity = 4;
  string picture = 5; // [建议新增] 商品图片
}

message MarkOrderPaidRequest {
  string order_no = 1;
}

message MarkOrderPaidResponse {
  bool success = 1;
}

message CancelOrderRequest {
  string order_no = 1;
  int64 user_id = 2; // 需要校验这是谁的订单，防止恶意取消别人的
}

message CancelOrderResponse {
  bool success = 1;
}