syntax = "proto3";

package payment;

option go_package = "go-ecommerce/proto/payment";

service PaymentService {
  rpc Pay(PayRequest) returns (PayResponse);
}

message PayRequest {
  string order_no = 1;
  float amount = 2;
}

message PayResponse {
  bool success = 1;
  string tx_id = 2; // [关键] 对应 Go 里的 TxId
}