syntax = "proto3";

package user;

option go_package = "go-ecommerce/proto/user;user";

service UserService {
  // 登录
  rpc Login(LoginRequest) returns (LoginResponse);
  // 注册
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int32 code = 1;
  string msg = 2;
  string token = 3; // JWT Token
  int64 user_id = 4;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string mobile = 3;
}

message RegisterResponse {
  int32 code = 1;
  string msg = 2;
}